# OpenWrite

./: AGENTS.md  README.md  pyproject.toml
openwrite/: __init__.py  cli.py  grammar_checker.py
tests/: test_grammar_checker.py
