[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openwrite"
version = "0.1.0"
description = "Rule-based grammar checker"
authors = [{name = "OpenAI"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
openwrite = "openwrite.cli:main"
